# liminal

./: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md  TESTING.md
docs/: architecture.md  data_flow.md
examples/: ollama_integration.rs  test_config.rs  wgpu_text_rendering.rs
src/: ai.rs  app.rs  config.rs  errors.rs  lib.rs  main.rs  renderer.rs  shell.rs  terminal.rs  ui.rs
src/shaders/: terminal.wgsl
src/ui/: events.rs  layout.rs  mod.rs  renderer.rs  styling.rs  widgets.rs
